---------------------------
testresources release notes
---------------------------

IN DEVELOPMENT
--------------

IMPROVEMENTS
~~~~~~~~~~~~

* FixtureResource was not triggering cleanups or resets between uses, this is
  fixed (but will make OptimisingTestSuite trigger resets on every transition
  between tests). (Robert Collins, James Westby, #1023423)

* TestResourceManager.reset() was not taking dependency dirtiness into
  consideration. (Brian Sutherland, #783488)

0.2.6
-----

IMPROVEMENTS
~~~~~~~~~~~~

* NEWS made clearer. (Martin Pool)

* Python3.2+ compatible. (Robert Collins)

0.2.5
-----

IMPROVEMENTS
~~~~~~~~~~~~

* Added ``testresources.FixtureResource`` to wrap ``fixtures.Fixture``
  instances. (Robert Collins)

* super() is now called from ResourcedTestCase fixing a long standing issue
  with using it as a mix-in in Python 2.4 and above. (Tim Cole, #771505)

* Typo in NEWS fixed. (Thommi Richards)

0.2.4
-----

CHANGES
~~~~~~~

* Relicenced to BSD / Apache2.0 with full agreement of contributors.

IMPROVEMENTS
~~~~~~~~~~~~

* Substantially improved documentation in README. (mbp)

* Rename TestResource to TestResourceManager leaving TestResource as an alias.
  Fixes bug #520769.

* Test sorting no longer performs N! work on tests that can never benefit from
  order optimisations (when resources are not shared an arbitrary order is
  sufficient). Partial fix for bug #522338.

* Test sorting now uses a heuristic on each partition to get a sort that is
  no worse than twice the optimal number of setup/teardown operations and is
  fast to calculate. Fixes bug #522338

0.2.3
-----

CHANGES
~~~~~~~

IMPROVEMENTS
~~~~~~~~~~~~

* Distribute doc/*.py in the source tarball.

* New helper testresources.GenericResource which should remove the need for
  much boilerplate when using testresources with existing test fixtures.

BUG FIXES
~~~~~~~~~

API CHANGES
~~~~~~~~~~~

* New public functions testresources.setUpResources and