@@ -58,3 +58,9 @@ class ResultWithResourceExtensions(TestResult):
 
     def stopMakeResource(self, resource):
         self._calls.append(("make", "stop", resource))
+
+    def startResetResource(self, resource):
+        self._calls.append(("reset", "start", resource))
+
+    def stopResetResource(self, resource):
+        self._calls.append(("reset", "stop", resource))
